src/less/spacing.less
/*
 * Spacing
 *
 * By kosssi (Simon Constans) CC-BY 3.0
 * Fork of KNACSS (Raphael Goetter, Alsacreations) : http://www.knacss.com/
 *
 * p, m = padding, margin
 * a, t, r, b, l, v, h = all, top, right, bottom, left, vertical(left, right), horizontal(top, bottom)
 * n, s, m, l = none(0), small(10px), medium(20px), large(30px)
 */


/*
 * Margin
 */

.man { margin: 0; }
.mas { margin: @smallvalue; }
.mam { margin: @mediumvalue; }
.mal { margin: @largevalue; }

// margin top
.mtn { margin-top: 0; }
.mts { margin-top: @smallvalue; }
.mtm { margin-top: @mediumvalue; }
.mtl { margin-top: @largevalue; }

// margin right
.mrn { margin-right: 0; }
.mrs { margin-right: @smallvalue; }
.mrm { margin-right: @mediumvalue; }
.mrl { margin-right: @largevalue; }

// margin bottom
.mbn { margin-bottom: 0; }
.mbs { margin-bottom: @smallvalue; }
.mbm { margin-bottom: @mediumvalue; }
.mbl { margin-bottom: @largevalue; }

// margin left
.mln { margin-left: 0; }
.mls { margin-left: @smallvalue; }
.mlm { margin-left: @mediumvalue; }
.mll { margin-left: @largevalue; }

// margin vertical
.mvn { .mtn; .mbn; }
.mvs { .mts; .mbs; }
.mvm { .mtm; .mbm; }
.mvl { .mtl; .mbl; }

// margin horizontal
.mhn { .mrn; .mln; }
.mhs { .mrs; .mls; }
.mhm { .mrm; .mlm; }
.mhl { .mrl; .mll; }


/*
 * Padding
 */

.pan { padding: 0; }
.pas { padding: @smallvalue; }
.pam { padding: @mediumvalue; }
.pal { padding: @largevalue; }

// padding top
.ptn { padding-top: 0; }
.pts { padding-top: @smallvalue; }
.ptm { padding-top: @mediumvalue; }
.ptl { padding-top: @largevalue; }

// padding right
.prn { padding-right: 0; }
.prs { padding-right: @smallvalue; }
.prm { padding-right: @mediumvalue; }
.prl { padding-right: @largevalue; }

// padding bottom
.pbn { padding-bottom: 0; }
.pbs { padding-bottom: @smallvalue; }
.pbm { padding-bottom: @mediumvalue; }
.pbl { padding-bottom: @largevalue; }

// padding left
.pln { padding-left: 0; }
.pls { padding-left: @smallvalue; }
.plm { padding-left: @mediumvalue; }
.pll { padding-left: @largevalue; }

// padding vertical
.pvn { .prn; .pln; }
.pvs { .prs; .pls; }
.pvm { .prm; .plm; }
.pvl { .prl; .pll; }

// padding horizontal
.phn { .prn; .pln; }
.phs { .prs; .pls; }
.phm { .prm; .plm; }
.phl { .prl; .pll; }

